# plants_bot

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yaml
infra/: docker-compose-prod.yaml
src/bot/: callback.py  db.py  keyboard.py  log_message.py  main.py  middleware.py  model.py  scheduler.py  states.py  view.py
src/bot/constants/: __init__.py  add_plant.py  check_plant.py  constants.py  error.py  keyboard.py  logic.py  message.py  pagination.py
src/bot/handlers/: __init__.py  add_plant.py  check_plant.py  check_plants.py  cmd.py  delete_plant.py  notifications.py
src/bot/models/: __init__.py  plant.py  user.py
src/bot/utils/: __init__.py  filters.py  handlers.py  models.py  storage.py  telegram.py
src/config/: __init__.py  config.py  config.yaml  logger.py
src/tests/: conftest.py  fakes.py  test_config.py  test_conftest_fixture.py  test_handlers_add_plant.py  test_handlers_check_plant.py  test_handlers_check_plants.py  test_handlers_cmd.py  test_handlers_delete_plant.py  test_handlers_notifications.py  test_keyboard.py  test_models_helpers.py  test_models_plant.py  test_models_user.py  test_scheduler.py  test_states.py  test_utils_filters.py  test_utils_handlers.py  test_utils_models.py  test_utils_telegram.py  test_view.py
