[project]
name = "plants-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "apscheduler>=3.11.0",
    "beanie>=2.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "types-python-dateutil>=2.9.0.20251115",
    "types-pyyaml>=6.0.12.20250915",
    "watchfiles>=1.1.1",
    "wemake-python-styleguide>=1.4.0",
]
